--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ Deprecated==1.2.18
 distro==1.9.0
 Django==5.1.7
 django-ckeditor==6.7.2
+django-cors-headers==4.7.0
 django-js-asset==3.1.2
 django-mathjax==0.0.8
 docx2pdf==0.1.8
@@ -52,6 +53,7 @@ humanfriendly==10.0
 idna==3.10
 importlib_metadata==8.6.1
 importlib_resources==6.5.2
+Jinja2==3.1.6
 jiter==0.9.0
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -66,6 +68,7 @@ langchain-text-splitters==0.3.8
 langsmith==0.3.31
 lxml==5.3.2
 markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 marshmallow==3.26.1
 matplotlib==3.10.3
 mdurl==0.1.2
